--- a/style.css
+++ b/style.css
@@ -29,14 +29,17 @@
 html{
     scroll-behavior: smooth;
 }
-   body{
+body{
     max-width: 100vw;
     overflow-x: hidden;
     background-color: var(--slate);
 }
-   section{
+section{
     position: relative;
     max-width: 100vw;
+    scroll-snap-align: center;
+    min-height: 100vh;
+
 }
 
 .btn__mailing{
@@ -475,3 +478,17 @@ footer {
     color: white;
     margin-left: 20vw;
 }
+
+/* Scroll behaviour */
+@media (min-height: 30em) {
+    main {
+      scroll-snap-type: y mandatory;
+      height: 100vh;
+      overflow-y: scroll;
+    }
+  }
+@media (min-height: 30em) {
+    .section {
+      height: 100vh;
+    }
+  }
